homebrew release: update release asset regex
Update release asset regex to specify runtime and version groups so that
update-homebrew task can correctly detect version.

--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -14,5 +14,5 @@ jobs:
         tap: microsoft/git
         name: git-credential-manager-core
         type: cask
-        releaseAsset: gcm-osx-x64-(.*)\.pkg
+        releaseAsset: gcm-osx-(?<runtime>.*)-(?<version>.*)\.pkg
         alwaysUsePullRequest: true
